--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
   "private": true,
   "workspaces": [
     "apps/*"
-  ]
+  ],
+  "scripts": {
+    "cms:dev": "yarn workspace cms develop",
+    "api:dev": "yarn workspace api dev",
+    "client:dev": "yarn workspace client dev",
+    "dev": "concurrently \"yarn run cms:dev\" \"yarn run api:dev\" \"yarn run client:dev\""
+  },
+  "devDependencies": {
+    "concurrently": "^8.1.0"
+  }
 }
