--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,14 +7,14 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "start": "node server.js"
+    "dev": "nodemon src/server.ts"
   },
   "dependencies": {
-    "fastify": "^4.17.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/node": "^20.2.5",
+    "@types/express": "^4.17.17",
+    "nodemon": "^2.0.22",
     "typescript": "^5.1.3"
   }
 }
