--- a/apps/cms/.env.example
+++ b/apps/cms/.env.example
@@ -4,3 +4,13 @@ APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 JWT_SECRET=tobemodified
+
+# Database
+DATABASE_CLIENT=postgres
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=5432
+DATABASE_NAME=brochuregrid
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=
+DATABASE_SSL=false
+
