--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2"
