--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,9 +12,11 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "dotenv": "^16.1.4",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "nodemon": "^2.0.22",
     "typescript": "^5.1.3"
